# sphinx-pyrepl-web

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
docs/: conf.py  example.rst  index.rst
docs/_static/: autodoc_demo.py  replay_demo.py  setup.py
docs/_static/wheels/: pyrepl_test_pkg-1.0.0-py3-none-any.whl
scripts/: build_test_pkg_wheel.py  vendor_repl.py
sphinx_pyrepl_web/: __init__.py  autodoc.py  doctest.py
sphinx_pyrepl_web/pyrepl/: chunk-94xkfg72.js  chunk-cnc6ympw.js  chunk-e4mhg83d.js  chunk-es2qkm30.js  chunk-ftjk4vft.js  chunk-jfxv8vy0.js  chunk-rwvvnj4j.js  chunk-vx91qfkd.js  chunk-x20ze186.js  pyrepl.esm.js  pyrepl.js  version.txt
tests/: __init__.py  conftest.py  helpers.py  support.py  test_asset_href.py  test_autodoc.py  test_autodoc_bootstrap.py  test_autodoc_bootstrap_source.py  test_autodoc_doctest.py  test_autodoc_include.py  test_basic.py  test_build_autodoc_replay.py  test_build_replay.py  test_doctest_to_replay_source.py  test_extract_doctest_inputs.py  test_local_wheel.py  test_nested_static_paths.py  test_strip_doctest_prompts.py
tests/doctree/: test_autodoc_scope.py  test_pyrepl_directive.py
tests/fixtures/: __init__.py  sources.py
tests/fixtures/pyrepl_test_pkg/: pyproject.toml
tests/fixtures/pyrepl_test_pkg/pyrepl_test_pkg/: __init__.py  demo.py
tests/fixtures/wheels/: pyrepl_test_pkg-1.0.0-py3-none-any.whl
tests/integration/: test_autodoc_wiring.py  test_build_output.py  test_include.py  test_nested_pages.py
tests/unit/: test_asset_href.py  test_autodoc_bootstrap_source.py  test_config.py  test_copy_assets.py  test_doctest_to_replay_source.py
