[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx-pyrepl-web"
authors = [{name = "Christian López Barrón", email = "chris.gfz@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Sphinx :: Extension",
    "License :: OSI Approved :: MIT License",
]
keywords = ["sphinx", "pyrepl", "pyodide", "repl"]
dynamic = ["version", "description"]
requires-python = ">=3.14"
dependencies = [
    "sphinx>9",
]

[project.urls]
Home = "https://github.com/chrizzFTD/sphinx-pyrepl-web"

[project.optional-dependencies]
test = [
    "pytest",
    "sphinx-pytest",
]
