[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx-pyrepl-web"
authors = [{name = "Christian López Barrón", email = "chris.gfz@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
]
keywords = ["sphinx", "pyrepl", "pyodide", "repl"]
dynamic = ["version", "description"]
requires-python = ">=3.12"
dependencies = [
    "sphinx>9",
]

[project.urls]
Home = "https://github.com/chrizzFTD/sphinx-pyrepl-web"
Documentation = "https://sphinx-pyrepl-web.readthedocs.io/"
Repository = "https://github.com/chrizzFTD/sphinx-pyrepl-web"
Issues = "https://github.com/chrizzFTD/sphinx-pyrepl-web/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "sphinx-pytest",
]
docs = [
    "myst-parser",
]
